--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines":{
+    "node":"9.2.0"
+  },
   "author": "Carlos Hernández",
   "license": "ISC",
   "dependencies": {
